fix some spacing issues

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -21,9 +21,6 @@ h1,h2,h3
 .custom-block
   text-align: left
 
-.header
-    height: 200px
-
 .home
   padding: 3.1rem 0 0 0
   width: 100%
